# refine-haus-clinic

./: .gitignore  AI_CHATBOT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  treatment.txt
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .gitignore  Dockerfile  config.py  pyproject.toml  requirements.txt  seed_embeddings.py
backend/app/: main.py
backend/app/agents/: runner.py  sql_agent.py
backend/app/agents/prompts/: system.md  system.py
backend/app/agents/tools/: database_tools.py
backend/app/api/: router.py
backend/app/api/routes/: ai.py  appointment.py  booking.py  chat.py  dashboard.py  health.py  ml.py  promotion.py  purchase_invoice.py  resource.py  transaction.py  treatment.py
backend/app/db/: DATABASE_DOCUMENTATION.md  attribute.md  postgres.py  schema.sql  schema2.sql  schema_new.sql  trigger.sql  vector_setup.sql
backend/app/ml/: apriori.py
backend/app/schemas/: appointment.py  booking.py  chat.py  customer.py  dashboard.py  inventory.py  purchase.py  treatment.py  withdraw.py
backend/app/services/: embedding_service.py  retrieval_service.py  scheduler.py
backend/app/services/llm/: mock.py  open_ai.py  openai_service.py
backend/app/utils/: storage.py
backend/db/: DATABASE_DOCUMENTATION.md  attribute.md  schema.sql  trigger.sql
backend/refine_haus_clinic_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
(+26 files in other folders)
