[project]
name = "refine-haus-clinic-backend"
version = "0.1.0"
description = "Backend API for Refine Haus Clinic"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi[standard]",
  "langchain",
  "langchain-openai",
  "langchain-community",
  "langchain-postgres",
  "asyncpg",
  "psycopg2-binary",
  "pgvector",
  "python-dotenv",
  "openai>=1.0.0",
  "tiktoken",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []
